# Automation

./: .gitignore  pyproject.toml
src/automation/: automation.py
src/domain/: __init__.py  robot_base.py
src/frameworks/: __init__.py  automation.py  logger.py  validation.py
tests/: conftest.py  test_automation.py  test_robot_base.py  test_validation.py
