[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Gregorio Honorato <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
selenium = "^4.0.0"
pyautogui = "^0.9.53"
pillow = "^9.0.0"
pandas = "^1.3.0"
openpyxl = "^3.0.0"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
