[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Gregorio Honorato <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.0.0"
pyautogui = "^0.9.53"
pandas = "^1.3.0"
openpyxl = "^3.0.0"
pytesseract = "^0.3.10"
pytest = "^8.3.4"
colorlog = "^6.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "9.5"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0301", "R0903", "W1203"]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "6"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.commitizen]
version = "ˆ2.32.5"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "commitizen/__version__.py",
  ".pre-commit-config.yaml:rev:.+Commitizen"
]
